--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "projectsite",
+  "name": "ps",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stevelaws.github.io/projectsite",
+  "homepage": "./",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,11 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -23,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
